- bios/linea.S vdi/vdi_mouse.c: Enabled the Line-A functions dis_cur & hide_cur
  again (they still seem to work fine and are needed for GFA Basic). (THH)

2005-04-29
- po/gr.po: Added George Nakos' update for the Greek translation. (THH)

2005-05-01
- aes/gemsuper.* aes/gemdosif.S: Slightly improved the super() function (the
  AES trap entry point function). (THH)
- aes/gemrslib.c: Menu dividers now look normal again. (THH)

2005-05-02
- bios/screen.c: Added screen resolution switching support to the Setscreen()
  XBIOS function (for ST screen modes only at the moment). (THH)

2005-05-09
- bios/linea.S: Line-A #9 must be v_show_c() and not dis_cur(). (THH)
- vdi/vdi_mouse.c: Mouse must not be displayed again if it is already visible.

2005-05-11
- aes/gemfmalt.c: Mouse pointer is now always turned on while displaying a
  "form_alert" alert box. (THH)

2005-05-12
- bios/tosvars.S aciavecs.S: Moved kbdvbase and iorec structures and buffers
  from tosvars.S to aciavecs.S since they are not officialially documented
  system variables. (THH)

2005-05-19
- bios/bios.c: Bconout() did not work correctly with characters >= 128. (THH)
- bios/startup.S: Changed the size of the initial stack from 16384 to 2048
  bytes - that is still more than enough, I hope. (THH)

2005-05-22
- aes/gemgsxif.c aes/geminput.*: Fixed the problem that the mouse was not
  moving in certain programs. (THH)

2005-05-23
- bios/screen.c: Setscreen() now also reinitializes the font settings when the
  resolution changes. (THH)
- bios/bios.c startup.S: Some code cleanup - renamed startup() to bios_init(),
  removed unused code, etc. (THH)

2005-05-30
- desk/desk_rsc.c: Increased the size of a string buffer so that Greek and
  Spanish translations don't cause a buffer overflow anymore.
- Updated the documentation for version 0.8

* Release: 0.8

2005-06-20
- cli/command.c: Fixed some typos (thanks to Eero Tammien for the patch). (THH)
- po/fi.po: Added Finnish translation made by Eero Tammien. (THH)