@@ -1868,3 +1868,8 @@ Start... early ages
 2005-06-20
 - cli/command.c: Fixed some typos (thanks to Eero Tammien for the patch). (THH)
 - po/fi.po: Added Finnish translation made by Eero Tammien. (THH)
+
+2005-07-05
+- tools/tos-lang-change.c: Added Eero Tamminen's TOS language change program.
+- country.mk bios/country.h bios/keyb_se.h: Added Swedish/Finnish keyboard
+  table (THH).
